# cmake-hello-world

./: CMakeLists.txt  hello_world.cpp
hello/: CMakeLists.txt  speaker.cpp
